--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "angular-datatables": "^12.0.0",
+    "datatables.net": "^1.13.4",
+    "datatables.net-dt": "^1.13.4",
+    "jquery": "^3.7.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.7.5",
     "tslib": "^2.0.0",
@@ -28,7 +32,9 @@
     "@angular-devkit/build-angular": "~0.1101.4",
     "@angular/cli": "~11.1.4",
     "@angular/compiler-cli": "~11.1.2",
+    "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
