--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "angular-datatables": "^12.0.0",
     "datatables.net": "^1.13.4",
     "datatables.net-dt": "^1.13.4",
+    "datatables.net-responsive": "^2.4.1",
+    "datatables.net-responsive-dt": "^2.4.1",
     "jquery": "^3.7.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.7.5",
