mostrar mapa terminado

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "~11.1.2",
     "@angular/core": "~11.1.2",
     "@angular/forms": "~11.1.2",
+    "@angular/google-maps": "^16.0.1",
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
@@ -24,6 +25,7 @@
     "datatables.net-dt": "^1.13.4",
     "datatables.net-responsive": "^2.4.1",
     "datatables.net-responsive-dt": "^2.4.1",
+    "google-maps": "^4.3.3",
     "jquery": "^3.7.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.7.5",
