--- a/angular.json
+++ b/angular.json
@@ -19,17 +19,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "src/styles.css",
-              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
-              "node_modules/datatables.net-responsive-dt/css/responsive.dataTables.css"
-            ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.js",
-              "node_modules/datatables.net/js/jquery.dataTables.js",
-              "node_modules/datatables.net-responsive/js/dataTables.responsive.js"
-            ]
+            "assets": ["src/favicon.ico", "src/assets"]
           },
           "configurations": {
             "production": {
