--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "@types/googlemaps": "^3.43.3",
     "@types/jquery": "^3.5.16",
-    "google-maps": "^4.3.3",
     "jquery": "^3.7.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.7.5",
