--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "@types/jquery": "^3.5.16",
-    "jquery": "^3.7.0",
+    "angular-datatables": "^12.0.0",
+    "datatables.net": "^1.13.4",
+    "datatables.net-dt": "^1.13.4",
+    "datatables.net-responsive": "^2.4.1",
+    "datatables.net-responsive-dt": "^2.4.1",
+    "jquery": "3.2.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.7.5",
     "tslib": "^2.0.0",
@@ -31,6 +36,7 @@
   },
   "devDependencies": {
     "@types/googlemaps": "3.39.13",
+    "@types/datatables.net": "^1.10.24",
     "@angular-devkit/build-angular": "~0.1101.4",
     "@angular/cli": "~11.1.4",
     "@angular/compiler-cli": "~11.1.2",
